; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_glue.c_vm_imgact_unmap_page.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_glue.c_vm_imgact_unmap_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sf_buf = type { i32 }

@PQ_ACTIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vm_imgact_unmap_page(%struct.sf_buf* %0) #0 {
  %2 = alloca %struct.sf_buf*, align 8
  %3 = alloca i32, align 4
  store %struct.sf_buf* %0, %struct.sf_buf** %2, align 8
  %4 = load %struct.sf_buf*, %struct.sf_buf** %2, align 8
  %5 = call i32 @sf_buf_page(%struct.sf_buf* %4)
  store i32 %5, i32* %3, align 4
  %6 = load %struct.sf_buf*, %struct.sf_buf** %2, align 8
  %7 = call i32 @sf_buf_free(%struct.sf_buf* %6)
  %8 = call i32 (...) @sched_unpin()
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @PQ_ACTIVE, align 4
  %11 = call i32 @vm_page_unwire(i32 %9, i32 %10)
  ret void
}

declare dso_local i32 @sf_buf_page(%struct.sf_buf*) #1

declare dso_local i32 @sf_buf_free(%struct.sf_buf*) #1

declare dso_local i32 @sched_unpin(...) #1

declare dso_local i32 @vm_page_unwire(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
